# spare_buffer

./: Cargo.toml  README.md
examples/: fill_buffer.rs  read_file.rs
src/: buffer.rs  lib.rs  primitive.rs
